# font-effects-lib

./: .travis.yml  CMakeLists.txt  example.fe  license.txt  readme.md  readme_eng.md  reame.md
include/fe/: fe.h  fe_bundle.h  fe_effect.h  fe_export.h  fe_gradient.h  fe_image.h  fe_instance.h  fe_node.h
src/: ImageData.cpp  ImageData.h  ImageDataOperations.cpp  ImageDataOperations.h  fe-include.h  fe_bundle.cpp  fe_effect.cpp  fe_gradient.cpp  fe_image.cpp  fe_node.cpp  fe_node_custom.cpp  fe_node_effects.cpp  fe_node_effects.h  fe_parser.h  pixel.h
test/: dest.tga  example.fe  main.cpp  result.tga  src.tga  tga.cpp  tga.h
